# window_manager_Xorg

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
include/: Daemon.h  XServerConnection.h  common.h  tools.h
src/: Daemon.cpp  XServerConnection.cpp  tools.cpp
